panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_pointer_to_incomplete_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef size_t `unsigned long`)
   (function-definition external
      f~2 `fn(p: ptr<struct T~1>) -> unsigned long`
      (params
         p~4 `ptr<struct T~1>`)
      (compound-statement
         (return (sizeof `unsigned long` 8 (p~4 `ptr<struct T~1>`)))))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition p~7 `ptr<struct T~1>` (noop-type-conversion `ptr<struct T~1>` (nullptr `nullptr_t`)))
         (definition q~8 `ptr<struct T~1>` (noop-type-conversion `ptr<struct T~1>` (nullptr `nullptr_t`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (ptr-equal `int` (p~7 `ptr<struct T~1>`) (q~8 `ptr<struct T~1>`))))
         (return
            (truncate `int`
               (call `unsigned long`
                  (addressof `ptr<fn(p: ptr<struct T~1>) -> unsigned long>`
                     (f~2 `fn(p: ptr<struct T~1>) -> unsigned long`))
                  (p~7 `ptr<struct T~1>`)))))))

----- stderr -----
