panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_sizeof_union.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_sizeof_union.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_sizeof_union.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (union U~1
      (member x @0 `array<int; 2>`)
      (member c @0 `char`))
   (union U2~2
      (member c @0 `char`)
      (member x @0 `array<int; 3>`))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (sizeof `unsigned long` 4 `union U~1 complete`)
               (sizeof `unsigned long` 12 `union U2~2 complete`))))))

----- stderr -----
