panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_struct_completed_in_inner_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (compound-statement
            (struct T~2
               (member x @0 `int`)))
         (definition incomplete_here~3 `struct T~2 complete`
            (braced
               (subobject +0 (42 `int`)))))))

----- stderr -----
