panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_ternary.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_ternary.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_ternary.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member x @0 `long`))
   (function-definition external
      print_struct~2 `fn(value: struct Struct~1 complete) -> void`
      (params
         value~4 `struct Struct~1 complete`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 33>>`
                        (string `array<char; 33>` "struct Struct { long x = %ld; }\n\0"))))
               (member `long` x +0
                  (value~4 `struct Struct~1 complete`))))))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition value~7 `struct Struct~1 complete`
            (braced
               (subobject +0 (sign-extend `long` (42 `int`)))))
         (definition other~8 `struct Struct~1 complete`
            (braced
               (subobject +0 (sign-extend `long` (27 `int`)))))
         (expression
            (call `void`
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>`
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void`))
               (conditional `struct Struct~1 complete`
                  (true `bool`)
                  (other~8 `struct Struct~1 complete`)
                  (value~7 `struct Struct~1 complete`))))
         (expression
            (call `void`
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>`
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void`))
               (conditional `struct Struct~1 complete`
                  (false `bool`)
                  (other~8 `struct Struct~1 complete`)
                  (value~7 `struct Struct~1 complete`)))))))

----- stderr -----
